integration_tests/codegen_fail/fail/scalar/type_alias/attr_without_resolvers.rs
use juniper::graphql_scalar;

struct Scalar;

#[graphql_scalar]
type CustomScalar = Scalar;

fn main() {}
